# com-assis-rs

./: Cargo.toml
src/: main.rs
ui/: appwindow.slint
